tests/errors/add_int_real.x
my_int = 12
my_real = 13

result = my_int + my_real